Bug 65758 - [6 Regression] 191.fma3d in SPEC CPU 200 failed to build
Summary: [6 Regression] 191.fma3d in SPEC CPU 200 failed to build
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 6.0
: P3 normal
Target Milestone: 6.0
Assignee: Richard Biener
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-14 00:20 UTC by H.J. Lu
Modified: 2015-04-14 12:57 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2015-04-14 00:00:00


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2015-04-14 00:20:42 UTC
On Linux/x86-64, r222061 gave

gfortran -c -o output.o   -DSPEC_CPU2000_LP64         -O2 -ffast-math   output.f90
...
internal compiler error: in set_lattice_value, at tree-ssa-ccp.c:524
0xc70167 set_lattice_value
	../../src-trunk/gcc/tree-ssa-ccp.c:524
0xc7502a visit_assignment
	../../src-trunk/gcc/tree-ssa-ccp.c:2268
0xc7518c ccp_visit_stmt
	../../src-trunk/gcc/tree-ssa-ccp.c:2342
0xcf6264 simulate_stmt
	../../src-trunk/gcc/tree-ssa-propagate.c:348
0xcf6417 process_ssa_edge_worklist
	../../src-trunk/gcc/tree-ssa-propagate.c:422
0xcf7c18 ssa_propagate(ssa_prop_result (*)(gimple_statement_base*, edge_def**, t
ree_node**), ssa_prop_result (*)(gphi*))
	../../src-trunk/gcc/tree-ssa-propagate.c:896
0xc6e0d4 do_ssa_ccp
	../../src-trunk/gcc/tree-ssa-ccp.c:2383
0xc6e0d4 execute
	../../src-trunk/gcc/tree-ssa-ccp.c:2416
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <http://gcc.gnu.org/bugs.html> for instructions.
specmake[3]: *** [output.o] Error 1
Comment 1 H.J. Lu 2015-04-14 02:02:46 UTC
It is caused by r222049.
Comment 2 Richard Biener 2015-04-14 07:16:32 UTC
Mine.
Comment 3 Richard Biener 2015-04-14 07:53:15 UTC
Reduced testcase:

      SUBROUTINE USER_MESSAGE (MESSAGE)
      CHARACTER MSGL*1
      CHARACTER, INTENT(IN) :: MESSAGE*(*)
      CHARACTER(21)  :: LEADER(4)
      CHARACTER(132) :: MSG_TEXT*132
      LOGICAL, SAVE  :: FIRST
 100  IR = MIN (LM, IL+INDEX(MESSAGE(MIN(LM,IL+1):LM)//MSGL,MSGL))
      IF (FIRST) THEN
        IF (INDEX(MESSAGE(IL:IR),'WARN') .NE. 0) THEN
          K = 2
        ELSE IF (INDEX(MESSAGE(IL:IR),'INFORM') .NE. 0) THEN
          K = 3
          GO TO 100
        ENDIF
      ELSE
        IF (MESSAGE(IR:IR) .EQ. MSGL) THEN
          MSG_TEXT = LEADER(K)//MESSAGE(IL+1:IR-1)
        ENDIF
      ENDIF
      END
Comment 4 Richard Biener 2015-04-14 12:17:36 UTC
Author: rguenth
Date: Tue Apr 14 12:17:05 2015
New Revision: 222085

URL: https://gcc.gnu.org/viewcvs?rev=222085&root=gcc&view=rev
Log:
2015-04-14  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/65758
	* tree-ssa-ccp.c (get_value_from_alignment): Adjust mask test
	against -1.
	(ccp_lattice_meet): Likewise.
	(bit_value_unop): Likewise.
	(bit_value_binop): Likewise.
	(bit_value_assume_aligned): Likewise.

	* gfortran.fortran-torture/compile/pr65758.f90: New testcase.

Added:
    trunk/gcc/testsuite/gfortran.fortran-torture/compile/pr65758.f90
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/tree-ssa-ccp.c
Comment 5 Richard Biener 2015-04-14 12:57:36 UTC
Fixed.