2015-04-14  Richard Biener  <rguenther@suse.de>

PR tree-optimization/65758
	* tree-ssa-ccp.c (get_value_from_alignment): Adjust mask test
	against -1.
	(ccp_lattice_meet): Likewise.
	(bit_value_unop): Likewise.
	(bit_value_binop): Likewise.
	(bit_value_assume_aligned): Likewise.

	* gfortran.fortran-torture/compile/pr65758.f90: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@222085 138bc75d-0d04-0410-961f-82ee72b054a4